--- a/kittypetter.html
+++ b/kittypetter.html
@@ -12,7 +12,7 @@
 	<h1 id="headerTitle">Kitty Petter</h1>
 
 	<div class="topnav">
-	<a class="active" href="home.html">Home</a>
+	<a class="active" href="index.html">Home</a>
 </div>
 
 <script>
