--- a/virtualpantspooper.html
+++ b/virtualpantspooper.html
@@ -14,7 +14,7 @@
 	
 
 	<div class="topnav">
-	<a class="active" href="home.html">Home</a>
+	<a class="active" href="index.html">Home</a>
 
 </div>
 
