--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 
 
 <header>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126629069-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-126629069-1');
+</script>
+
 	<link rel="stylesheet" href="csstest.css">
 
 </header>
